<resources>
    <string name="app_name">airline-android</string>
    <string name="airline_manager">Airline Manager</string>
    <string name="search_for_flight">Search for Flight</string>
    <string name="save_an_airline_s_info">Save an Airline\'s Info</string>
    <string name="help">Help</string>
    <string name="display_an_airline_s_info">Display an Airline\'s Info</string>
    <string name="create_an_airline">Create an Airline</string>
    <string name="enter_airline_name">Enter airline name</string>
    <string name="back_to_home">Back To Home</string>
    <string name="create_a_flight">Create A Flight</string>
    <string name="create_airline">Create Airline</string>
    <string name="enter_flight_number">Enter flight number</string>
    <string name="create_flight">Create Flight</string>
    <string name="choose_airline_to_add_flight_to">Choose airline to add flight to</string>
    <string name="enter_dest_date_and_time">Enter dest date and time</string>
    <string name="enter_dest_airport_ex_oak">Enter dest airport (ex. OAK)</string>
    <string name="enter_source_date_and_time">Enter source date and time</string>
    <string name="enter_source_airport_ex_pdx">Enter source airport (ex. PDX)</string>
    <string name="enter_flight_number2">Enter flight number</string>
    <string name="back_to_home2">Back to Home</string>
    <string name="search">Search</string>
</resources>